# prj001

./: Cargo.toml
crates/pj001/: Cargo.toml
crates/pj001-core/: Cargo.toml
crates/pj001-core/src/: block.rs  error.rs  lib.rs
crates/pj001-core/src/app/: event.rs  input.rs  layout.rs  macos_backdrop.rs  macos_bell.rs  macos_ime.rs  macos_menu.rs  macos_overlay.rs  macos_window.rs  mod.rs  session.rs
crates/pj001-core/src/grid/: mod.rs
crates/pj001-core/src/pty/: mod.rs  reader.rs
crates/pj001-core/src/render/: atlas.rs  font.rs  geometry.rs  mod.rs  shader.wgsl  theme.rs
crates/pj001-core/src/vt/: perform.rs
crates/pj001/src/: main.rs
docs/: architecture.md  backdrop-redesign.md  block-ui-design.md  config-schema.md  cursor-design.md  fuzz-harness.md  keyboard-design.md  m10-design.md  m12-design.md  menu-bar-design.md  menu-dispatch-design.md  multi-window-design.md  multi-window-shared-wgpu.md  multi-window-timing.md  reflow-design.md  roadmap.md  session-restore-design.md  settings-and-context-menu-plan.md  themes-handoff.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: vt_parser.rs
scripts/: bundle.sh
src/: error.rs  main.rs
src/app/: event.rs  input.rs  mod.rs
src/grid/: mod.rs
src/pty/: mod.rs  reader.rs
src/render/: atlas.rs  font.rs  geometry.rs  mod.rs  shader.wgsl
src/vt/: mod.rs  perform.rs
