[package]
name = "pj001"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30"
wgpu = "29"
pollster = "0.4"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
portable-pty = "0.9"
anyhow = "1"
vte = "0.15"
unicode-width = "0.2"
cosmic-text = "0.19"
swash = "0.2"
bytemuck = { version = "1", features = ["derive"] }
bitflags = "2"
arboard = "3.6"
