[workspace]
members = [
    "crates/pj001-core",
    "crates/pj001",
]
default-members = [
    "crates/pj001-core",
    "crates/pj001",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
arboard = "3.6"
bitflags = "2"
bytemuck = { version = "1", features = ["derive"] }
cosmic-text = "0.19"
env_logger = "0.11"
log = "0.4"
pj001-core = { path = "crates/pj001-core" }
pollster = "0.4"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
swash = "0.2"
thiserror = "2"
toml = "0.8"
unicode-width = "0.2"
vte = "0.15"
wgpu = "29"
winit = "0.30"
